Updated readme and composer.json for initial release.

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
         }
     ],
     "require": {
-        "loadsys/puphpet-release-composer-installer": "dev-f/basic-init"
+        "loadsys/puphpet-release-composer-installer": "*"
     }
 }
