Required packages was renamed too ;)

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
         }
     ],
     "require": {
-        "loadsys/puphpet-release-composer-installer": "*"
+        "phpfu/puphpet-installer": "*"
     }
 }
